# second-brain

./: .circuit_breaker_state 2  .dockerignore  .gitignore  @AGENT.md  @fix_plan.md  AGENTS.md  CLAUDE.md  Dockerfile  PRD.md  Prompt.md  README.md  RUN.md  docker-compose.yml  pyproject.toml  run_bot.py
.github/workflows/: cd.yml  ci.yml
.ralph/: PROGRESS.md  TASKS.json
deploy/: .env.example  README.md  docker-compose.prod.yml
deploy/scripts/: backup.sh  health-check.sh  notify-telegram.sh  rollback.sh  setup-server.sh
deploy/systemd/: install.sh  second-brain-briefing.service  second-brain-briefing.timer  second-brain-nudge.service  second-brain-nudge.timer  second-brain.service
docs/: TEST_FAILURES.md  TEST_PLAN.md  uptimerobot-setup.md
docs/plans/: 2026-01-11-init-deep.md
schemas/: knowledge_index.example.json  knowledge_index.schema.json
scripts/: at_001_task_creation_test.sh  at_002_task_completion_test.sh  at_005_stuck_no_progress_test.sh  at_006_stuck_same_error_test.sh  at_007_cost_tracking_test.sh  at_008_sandbox_test.sh  at_009_learning_test.sh  bootstrap.sh  bootstrap_test.sh  claude_adapter.sh  claude_adapter_test.sh  comprehensive_bot_test.py  conversation_log.sh  conversation_log_test.sh  cost_tracker.sh  knowledge_schema_test.sh  knowledge_search.sh  knowledge_search_test.sh  knowledge_validate.sh  learning_db.sh  notion_bootstrap.py  run.sh  run_test.sh  sandbox_guard.sh  smoke_test.sh  smoke_test_test.sh  stuck_detector.sh  task_complete.sh  task_create.sh  task_engine.sh  task_engine_test.sh  test_bot_browser.py  verify.sh  verify_test.sh
src/: pytz.py
src/assistant/: __init__.py  __main__.py  cli.py  config.py  sentry.py
src/assistant/google/: __init__.py  auth.py  calendar.py  drive.py  gmail.py  maps.py
src/assistant/notion/: __init__.py  client.py  schemas.py
src/assistant/services/: __init__.py  always_on.py  audit.py  briefing.py  clarification.py  comparison_sheet.py  confidence.py  corrections.py  drive_task_linker.py  email_auto_reply.py  email_intelligence.py  email_scanner.py  entities.py  heartbeat.py  intent.py  llm_client.py  llm_parser.py  meeting_notes.py  nudges.py  offline_queue.py  parser.py  pattern_applicator.py  patterns.py  people.py  places.py  processor.py  projects.py  proximity.py  relations.py  research.py  research_formatter.py  research_pipeline.py  router.py  schedule_conflict.py  soft_delete.py  timezone.py  whisper.py
src/assistant/telegram/: __init__.py  bot.py  debrief.py  handlers.py
src/assistant/whatsapp/: __init__.py  client.py  handlers.py  webhook.py
tests/: test_always_on.py  test_audit.py  test_backup.py  test_briefing.py  test_calendar.py  test_cd_workflow.py  test_ci_workflow.py  test_clarification.py  test_comparison_sheet.py  test_confidence.py  test_corrections.py  test_debrief.py  test_docker_compose.py  test_dockerfile.py  test_drive_task_linker.py  test_email_auto_reply.py  test_entities.py  test_gmail.py  test_google_auth.py  test_handlers.py  test_health_check.py  test_heartbeat.py  test_llm_client.py  test_llm_parser.py  test_meeting_notes.py  test_notify_telegram.py  test_nudges.py  test_offline_queue.py  test_parser.py  test_pattern_applicator.py  test_patterns.py  test_people.py  test_places.py  test_projects.py  test_proximity.py  test_relations.py  test_research.py  test_research_formatter.py  test_research_pipeline.py  test_rollback.py  (+11 more)
