[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "second-brain"
version = "0.5.0"
description = "Personal AI Assistant - Second Brain"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "John Ross" }
]
dependencies = [
    "aiogram>=3.4.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.118.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
assistant = "assistant.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
