[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "second-brain"
version = "0.5.0"
description = "Personal AI Assistant - Second Brain"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "John Ross" }
]
dependencies = [
    "aiogram>=3.4.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.118.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pyyaml>=6.0.0",
    "types-pytz>=2024.1.0",
    "types-python-dateutil>=2.8.0",
]

[project.scripts]
assistant = "assistant.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
# Use strict mode as base but relax some checks for third-party integrations
strict = true
# Ignore missing stubs for external packages
ignore_missing_imports = true
# Relax strict checks for third-party library integration issues
disallow_subclassing_any = false
disallow_untyped_decorators = false
warn_return_any = false
# Allow untyped defs in modules that interface heavily with untyped libraries
disallow_untyped_defs = false
disallow_untyped_calls = false
# Allow bare generics (dict instead of dict[str, Any])
disallow_any_generics = false
# Disable import-untyped errors (stubs installed in CI via types-pytz)
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "google.*",
    "google_auth_oauthlib.*",
    "googleapiclient.*",
    "pydrive.*",
    "pydrive2.*",
    "aiogram.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "assistant.google.*"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "assistant.services.research",
    "assistant.services.whisper",
    "assistant.services.timezone",
    "assistant.services.confidence",
    "assistant.services.router",
    "assistant.services.projects",
    "assistant.services.places",
    "assistant.services.people",
    "assistant.services.pattern_applicator",
    "assistant.telegram.debrief",
]
disallow_any_generics = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
